--- a/html/part1/index.html
+++ b/html/part1/index.html
@@ -24,7 +24,9 @@
 </head>
 
 <body>
+    <!-- 用于挂载地图的节点 -->
     <div id="container"></div>
+    
     <!-- 使用百度地图 -->
     <script>
         let map = new BMap.Map("container");
